# research-lifecycle-template

./: .gitignore  .pre-commit-config.yaml  .textlintignore  .textlintrc  .vale.ini  LICENSE  README.md  package-lock.json  package.json  project.cue  pyproject.toml
cue.mod/: module.cue
tools/: word_counts.py
