[tool.poetry]
name = "research-lifecycle-template"
version = "0.0.1"
description = "A template for conducting scientific exploration using the research lifecycle and version control."
authors = ["d33bs <dave.bunten@cuanschutz.edu>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
