[tool.poetry]
name = "research-lifecycle-template"
version = "0.0.1"
description = "A template for conducting scientific exploration using the research lifecycle and version control."
authors = ["d33bs <dave.bunten@cuanschutz.edu>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
proselint = "^0.13.0"
spacy = "^3.4.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
min_confidence = 80
paths = ["tools"]
sort_by_size = true
verbose = true

[tool.isort]
profile = "black"
